# python-streamson

./: .flake8  .gitignore  .pre-commit-config.yaml  CHANGELOG.rst  Cargo.toml  README.md  pyproject.toml  tox.ini
.github/workflows/: audit.yml  code-quality.yml  create-release.yml
benchmarks/: MEASUREMENTS.md  run.sh  streamson-bench
src/: convert.rs  extract.rs  filter.rs  handler.rs  lib.rs  strategy.rs  trigger.rs
src/handler/: analyser.rs  base.rs  buffer.rs  indenter.rs  indexer.rs  output.rs  python.rs  regex.rs  replace.rs  shorten.rs  unstringify.rs
src/strategy/: all.rs  convert.rs  extract.rs  filter.rs  trigger.rs
streamson/: __init__.py  __main__.py  all.py  convert.py  extract.py  filter.py  handler.py  matcher.py  output.py  trigger.py
tests/: conftest.py  test_all.py  test_all_async.py  test_basic.py  test_convert.py  test_convert_async.py  test_extract.py  test_extract_async.py  test_extract_fd.py  test_extract_raw.py  test_filter.py  test_filter_async.py  test_trigger.py  test_trigger_async.py
