[package]
name = "streamson-python"
version = "3.1.0"
authors = ["Stepan Henek"]
edition = "2018"
description = "Python wrappers around streamson"
license = "MIT"
readme = "README.md"
keywords = ["json", "python", "splitter"]
repository = "https://github.com/shenek/python-streamson"
categories = ["parsing"]

[package.metadata.maturin.scripts]
streamson = "streamson:__main__.main"

[package.metadata.maturin]
classifier = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "License :: OSI Approved",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python",
    "Programming Language :: Rust",
]

[lib]
name = "streamson"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "~0.13.2", features = ["extension-module"] }
streamson-lib = "~6.3.1"
streamson-extra-matchers = "~6.3.1"
